[package]
name = "justconfig"
description = "Just a configuration information source for rust"
license = "Apache-2.0"
keywords = [ "settings", "config", "configuration", "environment", "env" ]
categories = [ "config", "parsing" ]
version = "0.9.1"
authors = ["Daniel Goß <developer@flashsystems.de>"]
edition = "2018"
homepage = "https://github.com/FlashSystems/just-config"
repository = "https://github.com/FlashSystems/just-config"
readme = "README.md"
exclude = [ "*.code-workspace", ".vscode" ]

[dependencies]
